# pathwise

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.command  run.sh
.claude/: launch.json
.github/workflows/: ci.yml
docs/: ALGORITHM.md  API.md  ARCHITECTURE.md  AUTHORING.md  DOMAINS.md  HANDBOOK.md  USER_MANUAL.md
docs/features/: README.md  alternatives.md  components.md  macc.md  scenarios.md  stream-bounds.md  transitions.md  valuechain.md
docs/proposals/: impact-generality-scoped-pricing.md  lca-roadmap.md  rename.md  simulation-backend.md  transport-fleet-layer1b.md  transport-network.md
examples/converters/: _writer.py  aluminium.py  build_library.py  petrochemical.py  shipping.py  steel.py
frontend/pathwise/: index.html  package-lock.json  package.json  vite.config.ts
frontend/pathwise/public/examples/: aluminium.xlsx  index.json  petrochemical.xlsx  shipping.xlsx  steel.xlsx
frontend/pathwise/src/: App.tsx  _preview.v2.html  api.ts  library.ts  main.tsx  styles.css  types.ts  workbook.ts
frontend/pathwise/src/components/: FacilityDesigner.tsx  FlowView.tsx  LineChart.tsx  MaccDesigner.tsx  PortfolioResult.tsx  ResultsView.tsx  SimpleView.tsx  TopologyChart.tsx  TransitionDesigner.tsx  (+1 more)
frontend/pathwise_default/: README.md  package-lock.json  package.json  vite.config.ts
frontend/pathwise_default/public/: sample_kss_line.xlsx
frontend/pathwise_default/src/: App.tsx  api.ts  defaults.ts  styles.css  types.ts  workbook.ts
scripts/: build_fleet_candidates.py  build_fleet_distance.py  build_fleet_reallocation.py  build_green_steel_example.py  build_petrochemical.py  build_sector_examples.py  build_shipping_carrier.py  build_steel.py
scripts/sources/petrochemical/: model.json
scripts/sources/shipping/: model.json
scripts/sources/steel/: model.json
src/pathwise/: __init__.py  config.py  logger.py  progress.py  routing.py  units.py
src/pathwise/api/: __init__.py  config_provider.py  jobs.py  main.py  models.py  runs_store.py  session_library_store.py  session_store.py  workbook_io.py
src/pathwise/assets/: units.yaml
src/pathwise/backends/: __init__.py  base.py  frontier_backend.py  linopy_backend.py  macc_backend.py  overrides.py  portfolio_backend.py  registry.py  simulation_backend.py  variants.py
src/pathwise/core/: __init__.py  build.py  builder.py  entities.py  extract.py  finance.py  network.py  objective.py  partition.py  problem.py  run.py  solve.py  valuechain.py  variables.py
src/pathwise/data/: __init__.py  aliases.py  assemble.py  components.py  convert.py  estimation.py  hierarchy.py  lcia.py  libraries.py  library.py  network.py  pathway.py  regroup.py  scenario.py  schema.json  schema.py  sheets.py  templates.py  trajectory.py  validation.py  valuechain.py  workbook.py
src/pathwise/domains/: __init__.py  base.py
src/pathwise/results/: __init__.py  export.py  extract.py
tests/: test_coefficient_converter.py  test_routing.py  test_smoke.py  test_units.py
tests/api/: test_alternatives.py  test_api.py  test_component_libraries.py  test_health.py  test_jobs.py  test_model_file_io.py  test_project_bundle.py  test_route_exposure.py  test_run.py  test_runs.py  test_scope_placement.py  test_session.py  test_session_libraries.py  test_units.py  test_workbook_io_sqlite.py
tests/backends/: test_backend.py  test_characterisation.py  test_fleet_distance_example.py  test_fleet_portfolio.py  test_fleet_reallocation_example.py  test_impact_agnostic.py  test_impact_optimisation.py  test_linopy_backend.py  test_macc_backend.py  test_outer_pathway.py  test_overrides.py  test_portfolio_backend.py  test_progress.py  test_shipping_carrier_example.py  test_shipping_stations_example.py  test_simulation_backend.py  test_steel_lcia_example.py  test_transport_example.py  test_variants.py
tests/core/: test_adoption_cap.py  test_availability_windows.py  test_blend_shares.py  test_chokepoint_toll.py  test_connection_fleet.py  test_consumption_bounds.py  test_core_model.py  test_cost_routing.py  test_edge_availability.py  test_edge_bounds_node_model.py  test_edge_flow_bounds.py  test_edge_lag.py  test_emission_target.py  test_ets_clearing_price.py  test_finance.py  test_fleet_acquisition.py  test_fleet_assignment.py  test_fleet_fuel.py  test_fleet_temporal.py  test_freight.py  test_green_corridor.py  test_intensity_cap.py  test_introduction_year.py  test_lever_opex.py  test_lever_sets.py  test_lifecycle_renewal.py  test_macc_tables.py  test_markets.py  test_max_capacity_factor.py  test_max_production.py  test_measure_opex.py  test_measure_sets.py  test_min_cf_and_market_kind.py  test_modal_choice.py  test_outer_search.py  test_output_slate.py  test_outsourcing.py  test_parallel_machines.py  test_partition.py  test_pool_passthrough.py  (+15 more)
tests/core/portfolio/: test_methods.py  test_returns.py  test_scenarios.py
tests/data/: example.py  test_assemble_robustness.py  test_component_kinds.py  test_components.py  test_convert.py  test_copy_component.py  test_data_layer.py  test_discount_resolution.py  test_green_steel_example.py  test_hierarchy.py  test_io_t_roundtrip.py  test_io_temporal.py  test_io_unit.py  test_io_unit_assembly.py  test_lcia.py  test_library.py  test_pathway.py  test_petrochemical_port.py  test_project_bundle.py  test_regroup.py  test_sector_examples.py  test_stream_properties.py  test_unit_registry.py  test_unit_validation.py  test_validation_hierarchy.py  test_year_less_cap.py
tests/data/refs/: petrochemical_deployment.csv
tests/domains/: test_domain_independence.py
tests/domains/shipping/: test_shipping_pack.py
tests/regression/: test_shipping_migration.py  test_steel.py
tools/: migrate_shipping_to_generic.py
(+186 files in other folders)
