[project]
name = "pathwise"
version = "0.1.0"
description = "General-purpose multi-period process/asset transition optimiser (MACC + technology transition + capital cost), with pluggable sector packs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PLANiT Institute" }]
dependencies = [
    "linopy>=0.3",
    "highspy>=1.7",
    "numpy>=1.26",
    "pandas>=2.1",
    "xarray>=2024.1",
    "pint>=0.23",
    "pint-pandas>=0.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandera>=0.18",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pandas-stubs",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathwise"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "N803",    # single-letter math arg names (T, x, dt) — allowed per CLAUDE.md
    "N806",    # single-letter math local names (A, K, R, T) — allowed per CLAUDE.md
    "RUF002",  # ambiguous unicode in docstrings — Greek math symbols (ρ, ε) are intentional
    "RUF003",  # ambiguous unicode in comments — ditto
    "SIM103",  # guard-style predicate helpers read clearer than a single negated return
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
packages = ["pathwise"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
