[project]
name = "pathwise"
version = "0.1.0"
description = "Process-network cost-optimisation model with a drag-and-drop designer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linopy>=0.3",
    "highspy>=1.7",
    "numpy>=1.26",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "pint>=0.23",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathwise"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# RUF001/002/003: allow Greek letters / en-dashes in math docstrings (per CLAUDE.md).
# RUF012: ClassVar mutable defaults not relevant to our dataclasses.
ignore = ["RUF001", "RUF002", "RUF003", "RUF012"]

[tool.mypy]
python_version = "3.11"
packages = ["pathwise"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["linopy.*", "highspy.*"]
ignore_missing_imports = true

# pint ships types but its UnitRegistry is generic; we use it untyped at the
# single boundary in units.py.
[[tool.mypy.overrides]]
module = ["pathwise.units"]
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
